알고리즘 공부

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+.classpath
 
 # External tool builders
 .externalToolBuilders/
@@ -66,6 +67,7 @@ local.properties
 ### Eclipse Patch ###
 # Spring Boot Tooling
 .sts4-cache/
+.project
 
 ### Java ###
 # Compiled class file
@@ -93,4 +95,4 @@ local.properties
 hs_err_pid*
 replay_pid*
 
-# End of https://www.toptal.com/developers/gitignore/api/java,eclipse.DS_Store
+.DS_Store
